2002-05-17  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/defs (configure.in): Quote macro arguments.
	Reported by Nicolas Joly.

2002-05-17  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/am/header-vars.am (build_triplet, host_triplet,
	target_triplet): Define.  Were removed by mistake on 2002-04-13.

2002-05-17  Alexandre Duret-Lutz  <duret_g@epita.fr>

	For PR automake/186:
	* lib/am/distdir.am (distcheck): Attempt a DESTDIR install.
	* tests/destdir.test: New file.
	* tests/Makefile.am (TESTS): Add destdir.test.

2002-05-16  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (conditional_true_when): Return false if $WHEN == FALSE.
	(conditional_is_redundant): Simplify.
	(conditional_implies_one_of,
	variable_not_always_defined_in_cond): New functions
	(macro_define): Reject appends if the variable is not defined in
	all conditions where `+=' applies.
	(invert_conditions): Rewrite.  Before this patch,
	invert_conditions("A_TRUE B_TRUE", "A_TRUE B_FALSE", "A_FALSE")
	would return ("A_FALSE B_TRUE", "A_FALSE B_TRUE"), which seems
	wrong (these conditions implies "A_FALSE").  Now it outputs (),
	which just means the input conditions cover all cases.
	(variable_conditions_permutations): Never output FALSE conditions.
	* tests/pluseq2.test, tests/pluseq3.test: Define data_DATA
	in the CHECK_FALSE condition to fix the test.
	* tests/pluseq5.test: Actually check the diagnostic.
	* tests/pluseq9.test: New file.
	* tests/Makefile.am (TESTS): Add pluseq9.test.

2002-05-14  Alexandre Duret-Lutz  <duret_g@epita.fr>

	Fix for PR automake/322:
	* automake.in (read_am_file): Rename $was_rule as $prev_state, and
	set it with IN_RULE_DEF, IN_VAR_DEF, or IN_COMMENT as appropriate.
	Handle comments continued by backslashes.
	* tests/comment6.test: New file.
	* tests/Makefile.am (TESTS): Add comment6.test.
	Reported by Braden N. McDaniel.

2002-05-08  Charles Wilson  <cwilson@ece.gatech.edu>
            Alexandre Duret-Lutz  <duret_g@epita.fr>
