@@ -5391,10 +5391,10 @@ sub conditional_is_redundant ($@)
 
 
 # $BOOLEAN
-# &conditional_implies_one_of ($COND, @CONDS)
-# -------------------------------------------
-# Returns true iff $COND implies one of the conditions in @CONDS.
-sub conditional_implies_one_of ($@)
+# &conditional_implies_any ($COND, @CONDS)
+# ----------------------------------------
+# Returns true iff $COND implies any of the conditions in @CONDS.
+sub conditional_implies_any ($@)
 {
     my ($cond, @conds) = @_;
 
@@ -6271,7 +6271,7 @@ sub invert_conditions
     foreach my $perm (@perm)
     {
 	push @notconds, $perm
-	    if ! conditional_implies_one_of ($perm, @conds);
+	    if ! conditional_implies_any ($perm, @conds);
     }
     return @notconds;
 }
