@@ -12,9 +12,11 @@ EOF
 
 cat > Makefile.am << 'END'
 if COND1
+  C = c
 if COND2
     A = a
     B = aa
+    C += cc
 else
     A = b
     B = bb
