@@ -1,3 +1,11 @@
+2002-05-20  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	* automake.in (conditional_implies_one_of): Rename as ...
+	(conditional_implies_any): ... this.
+	* tests/pluseq9.test: Exercise another case with the new
+	`C' variable.
+	Suggested by Raja R Harinath.
+
 2002-05-17  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	* tests/defs (configure.in): Quote macro arguments.
